# pytest-resource-usage

./: LICENSE  README.md  pyproject.toml
src/pytest_resource_usage/: duration.py  psutil_uss.py  report.py  tracemalloc.py  uss.py
tests/: test_showcase.py
